Fix view on mobile

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100svh;
     background-color: #f8f8f8;
     font-family: Arial, sans-serif;
 }
